--- a/src/App.css
+++ b/src/App.css
@@ -5,32 +5,30 @@
   left: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  width: 20%;
+  width: 90%;
   border-radius: 20px;
   background-color: #ececec;
-  padding: 120px;
-  height: 50vh;
-  overflow: hidden;
+  height: 90vh;
 }
 
 .password {
   position: absolute;
-  font-size: 2rem;
+  font-size: 1.6rem;
   background-color: white;
   padding: 15px 40px;
   border-radius: 5px;
   border: 2px solid #dbdbdb;
   cursor: pointer;
-  bottom: 50%;
+  bottom: 62%;
 }
 
 .generate-password {
-  padding: 15px 100px;
+  padding: 15px 40px;
   border: none;
   outline: none;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   color: white;
   border-radius: 5px;
   background-color: #0099ff;
@@ -44,19 +42,21 @@
 }
 
 .clickhere {
-  font-size: 1.3rem;
+  font-size: 0.9rem;
   font-style: italic;
   position: absolute;
   bottom: 13%;
 }
 
 .copied {
-  font-size: 1.3rem;
+  font-size: 0.8rem;
   background-color: #74d65e;
   color: #346629;
-  padding: 15px 50px;
+  padding: 10px 25px;
   border: 2px solid #346629;
+  top: 10%;
   border-radius: 10px;
+  position: absolute;
   text-align: center;
   white-space: nowrap;
 }
@@ -67,7 +67,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 55%;
+  top: 48%;
 }
 
 input[type="range"] {
@@ -98,7 +98,7 @@ input[type="range"]::-webkit-slider-thumb {
   display: flex;
   justify-content: center;
   cursor: pointer;
-  bottom: 32.5%;
+  bottom: 36%;
   user-select: none;
 }
 
